# BGETool

./: BGETool.ini  CMakeLists.txt  README.md
BGETool/: CMakeLists.txt  Camera.cpp  Camera.h  Input.cpp  Input.h  Offsets.cpp  Offsets.h  Structures.h  dllmain.cpp  error.cpp  error.h  magic_enum.hpp  main.cpp  main.h  mem.cpp  mem.h
BGETool/lib/: detours.lib
BGEToolInjector/: BGEToolInjector.rc  CMakeLists.txt  main.cpp
uplay32/: CMakeLists.txt  main.c
